Adds parser for BigDecimal numbers.