@@ -23,6 +23,29 @@ import java.util.concurrent.TimeUnit;
 /**
  * Benchmarks for selected floating point strings.
  * <pre>
+ * # JMH version: 1.35
+ * # VM version: JDK 19, OpenJDK 64-Bit Server VM, 19+36-2238
+ * # Intel(R) Core(TM) i7-8700B CPU @ 3.20GHz
+ *
+ * tryToReadEightDigits
+ *              (str)  Mode  Cnt    Score   Error  Units
+ * m                0  avgt    2    4.997          ns/op
+ * m              365  avgt    2   12.126          ns/op
+ * m             10.1  avgt    2   14.257          ns/op
+ * m        3.1415927  avgt    2   21.029          ns/op
+ * m    1.6162552E-35  avgt    2   28.545          ns/op
+ * m  0x1.57bd4ep-116  avgt    2  370.203          ns/op
+ *
+ * tryToReadFourDigits
+ * Benchmark    (str)  Mode  Cnt    Score   Error  Units
+ * m                0  avgt    2    4.951          ns/op
+ * m              365  avgt    2   12.300          ns/op
+ * m             10.1  avgt    2   14.440          ns/op
+ * m        3.1415927  avgt    2   20.244          ns/op
+ * m    1.6162552E-35  avgt    2   26.573          ns/op
+ * m  0x1.57bd4ep-116  avgt    2  363.786          ns/op
+ * </pre>
+ * <pre>
  * # JMH version: 1.28
  * # VM version: JDK 17, OpenJDK 64-Bit Server VM, 17+35-2724
  * # Intel(R) Core(TM) i7-8700B CPU @ 3.20GHz
@@ -37,7 +60,8 @@ import java.util.concurrent.TimeUnit;
  * </pre>
  */
 
-@Fork(value = 1, jvmArgsAppend = {"-XX:+UnlockExperimentalVMOptions", "--add-modules", "jdk.incubator.vector"
+@Fork(value = 1, jvmArgsAppend = {"-XX:+UnlockExperimentalVMOptions", "--add-modules", "jdk.incubator.vector",
+        "--enable-preview"
         //       ,"-XX:+UnlockDiagnosticVMOptions", "-XX:PrintAssemblyOptions=intel", "-XX:CompileCommand=print,ch/randelshofer/fastdoubleparser/FastDoubleParser.*"
 
 })
@@ -46,14 +70,14 @@ import java.util.concurrent.TimeUnit;
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
 @BenchmarkMode(Mode.AverageTime)
 @State(Scope.Benchmark)
-public class FastFloatParserFromByteArrayJmh {
+public class JavaFloatFromByteArrayJmh {
 
 
     @Param({
             "0",
             "365",
             "10.1",
-            "3.14159267",
+            "3.1415927",
             "1.6162552E-35",
             "0x1.57bd4ep-116"
     })
